 plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
id 'io.spring.dependency-management' version '1.1.4'
}

group = 'dev.rogacki'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

 compileJava {
     options.compilerArgs += ['--enable-preview']
 }

 repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation platform("org.springframework.ai:spring-ai-bom:0.8.1-SNAPSHOT")
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    implementation 'org.springframework.ai:spring-ai-qdrant'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'


    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
